--- a/index.html
+++ b/index.html
@@ -8,5 +8,10 @@
     <ul>
       <li><a href="week1.pdf">Part 1</a></li>
     </ul>
+
+    <h3> Useful Links </h3>
+    <ul>
+      <li><a href="https://code.visualstudio.com/docs/cpp/config-wsl">https://code.visualstudio.com/docs/cpp/config-wsl</a></li>
+    </ul>
   </body>
 </html>
