--- a/index.html
+++ b/index.html
@@ -6,7 +6,9 @@
   <body>
     <h1> Translator Design </h1>
     <ul>
-      <li><a href="week1.pdf">Part 1</a></li>
+      <li><a href="td_intro.pdf">Introduction</a></li>
+      <li><a href="td_ex1.pdf">Lab 1 Exercises</a></li>
+      <li><a href="td_ex.pdf">Additional exercises</a></li>
     </ul>
 
     <h3> Useful Links </h3>
