added week 2 exercises

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <ul>
       <li><a href="td_intro.pdf">Introduction</a></li>
       <li><a href="td_ex1.pdf">Lab 1 Exercises</a></li>
+      <li><a href="td_ex2.pdf">Lab 2 Exercises</a></li>
       <li><a href="td_ex.pdf">Additional exercises</a></li>
     </ul>
 
