worksheet for the 3rd lab

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
       <li><a href="td_intro.pdf">Introduction</a></li>
       <li><a href="td_ex1.pdf">Lab 1 Exercises</a></li>
       <li><a href="td_ex2.pdf">Lab 2 Exercises</a></li>
+      <li><a href="td_ex3.pdf">Lab 3 Exercises</a></li>
       <li><a href="td_ex.pdf">Additional exercises</a></li>
     </ul>
 
