added link to the compiler explorer

--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
 
     <h3> Useful Links </h3>
     <ul>
+      <li><a href="https://nandor.github.io/compiler-explorer">Compiler Explorer</a></li>
       <li><a href="https://code.visualstudio.com/docs/cpp/config-wsl">https://code.visualstudio.com/docs/cpp/config-wsl</a></li>
     </ul>
   </body>
